# agento

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SPEC.md  build.py  coverage.xml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
PLAN/: 00-master-plan.md  PHASE-01.md  PHASE-02.md  PHASE-03.md  PHASE-04.md  PHASE-05.md  PHASE-06.md  PHASE-07.md  PHASE-08.md  PHASE-09.md
docker/: Dockerfile  docker-compose.yml
openspec/: AGENTS.md  CONSTITUTION.md  README.md
openspec/changes/: .gitkeep
openspec/specs/01-foundation/: SPEC.md
openspec/specs/02-memory/: SPEC.md
openspec/specs/03-planning/: SPEC.md
openspec/specs/04-tools/: SPEC.md
openspec/specs/05-skills/: SPEC.md
openspec/specs/06-multi-agent/: SPEC.md
openspec/specs/07-spec-gen/: SPEC.md
openspec/specs/08-devops/: SPEC.md
openspec/specs/09-colab/: SPEC.md
scripts/: build.ps1  build.sh  install.sh  quickstart.sh  run.sh  test.sh
src/agento/: __init__.py  config.py  main.py
src/agento/application/: __init__.py  agent.py  commands.py  pipeline.py
src/agento/application/cmd/: __init__.py  memory.py
src/agento/core/: __init__.py  errors.py  graph.py  nodes.py  retry.py  state.py
src/agento/domain/: __init__.py
src/agento/domain/entities/: __init__.py  memory.py  plan.py  spec.py  task.py
src/agento/domain/ports/: __init__.py  llm_port.py  memory_port.py  tool_port.py
src/agento/domain/services/: __init__.py  execution_service.py  memory_service.py  planning_service.py  reflection_service.py
src/agento/infrastructure/: __init__.py
src/agento/infrastructure/devops/: __init__.py
src/agento/infrastructure/devops/cloud/: __init__.py
src/agento/infrastructure/llm/: __init__.py  base.py  openrouter.py  rate_limiter.py  router.py
src/agento/infrastructure/mcp/: __init__.py
src/agento/infrastructure/memory/: __init__.py  batch_processor.py  cache.py  conversation_store.py  embedder.py  faiss_store.py  index_manager.py  persistence.py  summarizer.py
src/agento/infrastructure/tools/: __init__.py
src/agento/ui/: __init__.py  app.py  console.py
tests/: conftest.py
tests/unit/: test_config.py  test_main.py
tests/unit/application/: test_agent.py  test_commands.py  test_memory_commands.py  test_pipeline.py
tests/unit/core/: test_core.py  test_errors.py  test_graph.py  test_nodes.py  test_retry.py
tests/unit/domain/: test_entities.py  test_plan.py  test_ports.py
tests/unit/domain/services/: test_execution_service.py  test_memory_service.py  test_planning_service.py  test_reflection_service.py
tests/unit/infrastructure/llm/: test_llm.py  test_openrouter.py  test_router_full.py
tests/unit/infrastructure/memory/: __init__.py  test_batch_processor.py  test_cache.py  test_conversation_store.py  test_embedder.py  test_faiss_store.py  test_persistence.py
tests/unit/infrastructure/tools/: __init__.py
tests/unit/ui/: test_console.py  test_ui.py
